# base_fastapi_01

./: LICENSE  README.md
fast_app/: .gitignore  README.md  pyproject.toml
fast_app/fast_app/: main.py
fast_app/tests/: test_main.py
fast_app/utils/: config.py
