[tool.poetry]
name = "fast-app"
version = "0.1.0"
description = ""
authors = ["infinith4 <infinith4@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_app"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.0"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
